# terraform-aws-bootstrap-example

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .sync_with_pdm_db.json  Dockerfile  Makefile  README.md  dummyfile.txt  pyproject.toml  test.http
.github/workflows/: pull_request.yml
iac/: .terraform.lock.hcl  README.md  data.tf  ecs.tf  locals.tf  outputs.tf  terraform.tfvars  variables.tf
iac/account_setup01/: .terraform.lock.hcl  README.md  main.tf  outputs.tf  variables.tf
iac/account_setup02/: .terraform.lock.hcl  README.md  data.tf  ecr.tf  locals.tf  outputs.tf  variables.tf  vpc.tf
src/: main.py
tests/: test_main.py
